Placed more styles in HTML into CSS file instead, and fixed alignment of second plant photo. Next part to work on is the third page, beginning on line 88

--- a/css_file/page_template.css
+++ b/css_file/page_template.css
@@ -87,13 +87,22 @@
 
 }
 
-.plant-crop {
+.plant-crop-1 {
   max-width: 400px;
   height: auto;
   border-radius: 25px;
   position: absolute;
   transform: translateY(-130%);
   margin-left: 68.5em;
+}
+
+.plant-crop-2 {
+  max-width: 400px;
+  height: auto;
+  border-radius: 25px;
+  position: absolute;
+  transform: translateY(15%);
+  margin-left: 70em;
 }
 
 .arrow-text {
@@ -125,7 +134,7 @@
 }
 
 .bio-text {
-  padding-top: 5em;
+  padding-top: 3.5em;
   padding-left: 6em;
 }
 
